<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB"
    tools:context="com.ziyawang.ziyadaily.activity.DetailsPublishActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/common_title_delete" />

        <TextView
            android:gravity="center"
            android:text="@string/SaleAssetTitle"
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <EditText
            android:id="@+id/des"
            android:textColor="#333"
            android:textSize="15sp"
            android:textColorHint="#999"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:gravity="left"
            android:hint="@string/ProjectDes"
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="170dp" />

        <RelativeLayout
            android:background="#fff"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/CompanyName"
                android:textColor="#333"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:text="@string/CompanyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/companyName"
                android:paddingLeft="15dp"
                android:hint="@string/PleaseInput"
                android:textColorHint="#999"
                android:textColor="#333"
                android:textSize="15sp"
                android:layout_toRightOf="@id/CompanyName"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <RelativeLayout
            android:background="#fff"
            android:layout_marginTop="1px"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/contactPerson"
                android:textColor="#333"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:text="@string/contactPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/person"
                android:paddingLeft="15dp"
                android:hint="@string/PleaseInput"
                android:textColorHint="#999"
                android:textColor="#333"
                android:textSize="15sp"
                android:layout_toRightOf="@id/contactPerson"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <RelativeLayout
            android:background="#fff"
            android:layout_marginTop="1px"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/contactPhone"
                android:textColor="#333"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:text="@string/contactPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/phone"
                android:paddingLeft="15dp"
                android:hint="@string/PleaseInput"
                android:textColorHint="#999"
                android:textColor="#333"
                android:textSize="15sp"
                android:layout_toRightOf="@id/contactPhone"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:layout_marginBottom="14dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/submit"
        android:textColor="#fdd000"
        android:textSize="17sp"
        android:text="@string/ToPublish"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg333_rad5"
        android:layout_width="match_parent"
        android:layout_height="46dp" />

</RelativeLayout>
